# kastors-benchmark

./: .gitignore  Dockerfile  Makefile  Makefile.am  README  README.md  RUN.md  autogen.sh  configure.ac  default.nix  format_kastor  run.sh
common/: common.am  main.c  main.h
config/: config  config.default  poisson.config  sparselu.config  strassen.config
htdocs/: README.md  authors.md  config.json  index.html  index.md  kastors.tgz  navigation.md  performances.md
jacobi/: Makefile  Makefile.am
jacobi/include/: partition.h
jacobi/src/: jacobi-block-for.c  jacobi-block-task-dep-aff.c  jacobi-block-task-dep.c  poisson-aff.c  poisson-for.c  poisson-task.c  poisson.c
m4/: acx_cblas.m4  acx_lapacke.m4
plasma/: Makefile  Makefile.am
plasma/include/: async.h  auxiliary.h  common.h  compute_d.h  context.h  control.h  core_blas.h  core_blas_dag.h  core_dblas.h  core_dsblas.h  descriptor.h  global.h  plasma.h  plasma_d.h  plasma_ds.h  tile.h  timing.h
plasma/src/: allocate.c  async.c  auxiliary.c  context.c  control.c  core_dgetrf_rectil.c  core_dlaswp.c  core_dshift.c  dauxiliary.c  descriptor.c  dgecfi.c  dgeqrf.c  dgeqrs.c  dgetrf.c  dgetrs.c  dplgsy.c  dpotrf.c  dpotrs.c  global.c  pdbarrier.c  pdgeqrf.c  pdgetmi2.c  pdgetrf_rectil.c  pdlaswp.c  pdormqr.c  pdormqrrh.c  pdplgsy.c  pdpltmg.c  pdpotrf.c  pdshift.c  pdtile.c  pdtrsm.c  plasmaos.c  tile.c  time_dgeqrf-seq.c  time_dgeqrf-task.c  time_dgetrf-seq.c  time_dgetrf-task.c  time_dpotrf-seq.c  time_dpotrf-task.c  (+2 more)
scripts/: run_plasma.py  setup.sh
sparselu/: Makefile  Makefile.am
sparselu/src/: sparselu.c
strassen/: Makefile  Makefile.am
strassen/src/: strassen-seq.c  strassen-task-dep.c  strassen-task.c  strassen.c
